Fix dashboard calendar icon in dark mode
The fix enables dynamic switching to a white icon in dark mode.
It is stuck to the black icon at the moment.

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,3 +1,3 @@
 .app-icon-calendar {
-	background-image: url('../img/calendar-dark.svg');
+	background-image: var(--icon-calendar-dark);
 }
